@@ -57,6 +57,9 @@ def ps(x):
 		,'meta.tv.page': 				'http://www.thetvdb.com/index.php?tab=series&lid=7&id='
 		,'meta.tv.fanart.url': 	'http://www.thetvdb.com/banners/fanart/original/'
 		,'meta.tv.fanart.url2': '-1.jpg'
+		,'meta.tv.fanart.all.url': 'http://thetvdb.com/?tab=seriesfanart&id=%s'
+		,'meta.tv.fanart.all.match':	'<a href="(banners/fanart/original/\d+-(\d+)\.jpg)" target="_blank">View Full Size</a>'
+		,'meta.tv.fanart.all.prefix': 'http://thetvdb.com/'
 		,'meta.tv.poster.url': 	'http://www.thetvdb.com/banners/posters/'
 		,'meta.tv.poster.url2': '-1.jpg'
 		,'domain.search.movie': 'http://www.solarmovie.so/movie/search/'
