@@ -1,5 +1,14 @@
 
 
+[COLOR grey][Date: 2013.08.23][/COLOR][COLOR black][Post: 4][/COLOR]
+[COLOR cornflowerblue][B]Private Build:[/B][/COLOR]  v0.2.6
+
+[COLOR grey][Date: 2013.08.23][/COLOR][COLOR black][Post: 3][/COLOR]
+[COLOR cornflowerblue][B]Release:[/B][/COLOR]  v0.2.5
+
+[COLOR grey][Date: 2013.08.23][/COLOR][COLOR black][Post: 1][/COLOR]
+[COLOR red][B]News:[/B][/COLOR]  Fanart Changer for TV Show Favorites.
+
 [COLOR grey][Date: 2013.08.21][/COLOR][COLOR black][Post: 1][/COLOR]
 [COLOR red][B]News:[/B][/COLOR]  Improved apon my plugin graphics.
 ### fanart.jpg and icon.png have been updated.
