@@ -2,7 +2,11 @@
 - 
 - 
 - 
-- 
+### To see the updated graphic in the Favorites Folder, you currently have to back up a page and re-enter the Favorites Folder that way.
+### At first I had it set to forward back to the Favorites Folder after changing the fanart (with the updated graphic.  A problem accured when trying to go back from that menu, you'd end up at the update stage, so I did away with the page forward.
+### I might see about adding this for movies at a later time.
+### A new feature for TV Shows in Favorites.
+- (2013-08 -23) New Feature: Change Fanart.
 - New Graphics: fanart.jpg and icon.png have been updated.
 
 [B]Version 0.2.4[/B]
